--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "greenter/htmltopdf": "^5.1",
         "greenter/lite": "^5.1",
         "greenter/report": "^5.1",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "luecano/numero-a-letras": "^4.0",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
